# Nexora

./: .gitattributes  .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSE  README.md  install.bat  install_apk.bat  package.bat  uninstall.bat  vcpkg.json
.github/workflows/: android.yml  linux.yml  release.yml  windows.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/yvesgodoy/nexora/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/yvesgodoy/nexora/: LogActivity.kt  MainActivity.kt  QRScanner.kt  StreamActivity.kt  VcApplication.kt
android/app/src/main/java/com/yvesgodoy/nexora/networking/: ConnectionManager.kt  DeviceDescriptor.kt  ErrorReport.kt  PacketType.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  top_scrim.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/yvesgodoy/nexora/: ExampleUnitTest.kt
assets/brand/: generate-assets.ps1
docs/: BUILDING.md  PUBLICAR_NO_GITHUB.md
linux/: README.md  install.sh  install_apk.sh  nexora  nexora.desktop  uninstall.sh
windows/: CMakeLists.txt  Nexora.sln  Nexora.vcxproj  Nexora.vcxproj.filters  README.md
windows/res/: resource.rc
windows/src/: adb.h  application.cpp  application.h  canvas.cpp  canvas.h  directshowsource.cpp  directshowsource.h  logger.h  settings.cpp  settings.h  snapshotmanager.cpp  v4l2source.cpp  v4l2source.h  virtualcamera.cpp  virtualcamera.h
windows/src/gui/: qrconview.cpp  window.cpp  window.h
windows/src/net/: serializer.cpp  serializer.h  server.cpp
windows/src/rtsp/: manager.cpp  receiver.h
windows/src/video/: directshowscaler.cpp  directshowscaler.h  framescaler.cpp
(+14 files in other folders)
